--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,17 +3,17 @@
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-button.slick-next {
+.custom-slider button.slick-next {
   right: 80px;
   z-index: 10;
 }
 
-button.slick-prev {
+.custom-slider button.slick-prev {
   left: 20px;
   z-index: 10;
 }
 
-button.slick-next::before {
+.custom-slider button.slick-next::before {
   color: gray;
   content: '\276F';
   width: 80px;
@@ -25,7 +25,7 @@ button.slick-next::before {
   align-items: center;
 }
 
-button.slick-prev::before {
+.custom-slider button.slick-prev::before {
   color: gray;
   content: '\276E';
   width: 80px;
@@ -35,4 +35,58 @@ button.slick-prev::before {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.image-slider button.slick-next {
+  right: 0;
+  z-index: 10;
+  top: 55px;
+}
+
+.image-slider button.slick-prev {
+  left: 0;
+  top: 55px;
+  z-index: 10;
+}
+
+.image-slider button.slick-next::before {
+  color: gray;
+  content: '\276F';
+  width: 40px;
+  height: 40px;
+  background-color: #1c20ff;
+  font-size: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.image-slider button.slick-prev::before {
+  color: gray;
+  content: '\276E';
+  width: 40px;
+  height: 40px;
+  background-color: #1c20ff;
+  font-size: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+/* .my-masonry-grid {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-left: -30px;
+  width: auto;
+}
+
+.my-masonry-grid_column {
+  padding-left: 8px;
+  background-clip: padding-box;
+} */
+
+.my-masonry-grid_column>div {
+  margin-bottom: 20px;
 }
